ASEEMDEV/force-app/main/default/objects/Sales_Representative__c/Sales_Representative__c.object-meta.xml
<CustomObject>
    <label>Sales Representative</label>
    <nameField>
        <label>Sales Representative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Representatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>