ASEEMDEV/force-app/main/default/objects/Sales_Representative__c/fields/Source_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Source_Specialization__c</fullName>
    <label>Source Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>